scrollbar issue fixed and readme changelog updated

--- a/assets/css/universal.css
+++ b/assets/css/universal.css
@@ -1524,22 +1524,22 @@ div.wpt_product_table_wrapper table.wpt_product_table th.wpt_action {
 }
 /* Scrollbar Design */
 /* width */
-::-webkit-scrollbar {
+.wpt_product_table_wrapper ::-webkit-scrollbar {
   width: 7px;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+.wpt_product_table_wrapper ::-webkit-scrollbar-track {
   background: #f1f1f1; 
 }
  
 /* Handle */
-::-webkit-scrollbar-thumb {
+.wpt_product_table_wrapper ::-webkit-scrollbar-thumb {
   background: #0a7f9c; 
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+.wpt_product_table_wrapper ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
 /*Audio Player Style*/
